syntax = "proto3";

option go_package = "grpc/authentication/v1";

service AuthenticationAPI {
    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
}

message CreateAccountRequest {
    string account_name = 1;
}

message CreateAccountResponse {
    bool success = 1;
}
